--- a/HelloHotel/HelloHotel.API/HelloHotel.API/HelloHotel.API.csproj
+++ b/HelloHotel/HelloHotel.API/HelloHotel.API/HelloHotel.API.csproj
@@ -21,6 +21,7 @@
         <PackageReference Include="NUnit" Version="3.13.2" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.3" />
     </ItemGroup>
 
 </Project>
