--- a/HelloHotel/HelloHotel.API/HelloHotel.API.Tests/HelloHotel.API.Tests.csproj
+++ b/HelloHotel/HelloHotel.API/HelloHotel.API.Tests/HelloHotel.API.Tests.csproj
@@ -22,4 +22,9 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Rating System" />
+      <Folder Include="Searching System" />
+    </ItemGroup>
+
 </Project>
