Bounded Context Searching Update

--- a/HelloHotel/HelloHotel.API/HelloHotel.API.Tests/HelloHotel.API.Tests.csproj
+++ b/HelloHotel/HelloHotel.API/HelloHotel.API.Tests/HelloHotel.API.Tests.csproj
@@ -27,4 +27,8 @@
       <Folder Include="Searching System" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\HelloHotel.API\HelloHotel.API.csproj" />
+    </ItemGroup>
+
 </Project>
