Bounded Context Searchin Update

--- a/HelloHotel/HelloHotel.API/HelloHotel.API/appsettings.json
+++ b/HelloHotel/HelloHotel.API/HelloHotel.API/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AppSettings": {
+    "Secret": "Replace this String with chosen secret. Any String is allowed"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;database=security;user=root;password=paredes123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
